# cityvote

./: .dockerignore  .gitignore  COASTAL_CITY_SETUP.md  Dockerfile  ORIGIN_CITY_SETUP.md  README.md  STRUCTURES.md  sync.sh
.github/workflows/: ci-main.yaml
astro/: astro.config.mjs  package.json  pnpm-lock.yaml
astro/scripts/: fetch-webgl.sh
astro/src/components/hero/: README.md
astro/src/components/navigation/: SiteTitle.astro
astro/src/components/realtime/: README.md
astro/src/components/unity-react/: AstroUnityGameContainer.astro  README.md  ReactUnity.tsx  typeUnity.ts  unityService.ts
astro/src/content/docs/: game.mdx  gdd.mdx  index.mdx
astro/src/lib/: supabase-shared.ts
astro/src/styles/: global.css
astro/src/workers/: supabase.shared.ts
axum/: Cargo.toml
cat/: custom_shell.html  export_presets.cfg  project.godot
cat/addons/godo/: godo.gdextension  godo.gdextension.uid
cat/core/: cache.gd  cache.gd.uid  camera_manager.gd  camera_manager.gd.uid  card_combo_bridge.gd  card_combo_bridge.gd.uid  card_deck.gd  card_registry_bridge.gd  card_registry_bridge.gd.uid  chunk_manager.gd  chunk_manager.gd.uid  chunk_pool.gd  chunk_pool.gd.uid  combat_manager.gd  combat_manager.gd.uid  entity_manager.gd  entity_manager.gd.uid  entity_spawn_bridge.gd  entity_spawn_bridge.gd.uid  game_timer.gd  game_timer.gd.uid  i18n.gd  i18n.gd.uid  irc_websocket_client.gd.uid  loot_manager.gd  loot_manager.gd.uid  macos_window_manager.gd  macos_window_manager.gd.uid  map_config.gd  map_config.gd.uid  npc_pathfinding_bridge.gd  npc_pathfinding_bridge.gd.uid  pathfinding.gd  pathfinding.gd.uid  rust_toast_bridge.gd  rust_toast_bridge.gd.uid  ship_pathfinding_bridge.gd  ship_pathfinding_bridge.gd.uid  stats_manager.gd  stats_manager.gd.uid  (+10 more)
cat/core/pool/: cluster.gd  cluster.gd.uid  pool.gd  pool.gd.uid
cat/economy/: resource_ledger.gd  resource_ledger.gd.uid  resources.gd  resources.gd.uid
cat/examples/: card_atlas_test.gd  card_atlas_test.gd.uid
cat/nodes/cards/: card_atlas.gd  card_atlas.gd.uid  card_atlas.gdshader  card_atlas.tres  card_atlas_meshes.gd  card_atlas_meshes.gd.uid  card_deck.gd  card_deck.gd.uid  deck_manager.gd  deck_manager.gd.uid  playing_deck.gd  playing_deck.gd.uid  pooled_card.gd  pooled_card.gd.uid  pooled_card.tscn  task_adding_card.md
cat/nodes/cards/playing/: card-back1.png.import  card-back2.png.import  card-back3.png.import  card-back4.png.import  (+55 more)
cat/nodes/npc/: npc.gd  npc.gd.uid
cat/nodes/projectile/: projectile.gd  projectile.gd.uid  projectile.gdshader  projectile.gdshader.uid  projectile.tscn  projectile_atlas.png.import  projectile_atlas_metadata.json  projectile_sprite_atlas.py
cat/nodes/resources/: resource_manager.gd.uid
cat/nodes/ships/: ship.gd  ship.gd.uid
cat/shader/: atmosphere.gdshader.uid  burn_object.gdshader.uid  crt.gdshader.uid  fog_of_war.gdshader  fog_of_war.gdshader.uid  godrays.gdshader.uid  hexoutline.gdshader.uid  hexoutline_material.tres  smoke_atmosphere.gdshader  smoke_atmosphere.gdshader.uid  vignette.gdshader  vignette.gdshader.uid  water.gdshader  water.gdshader.uid  water_material.tres  with_wave.gdshader  with_wave.gdshader.uid
cat/shaders/: card_atlas.gdshader  card_atlas.gdshader.uid  card_atlas.tres  combo_highlight.gdshader.uid
cat/view/font/: alagard.ttf.import  chinese.ttf.import  hindi.ttf.import  japanese.ttf.import
cat/view/hand/: play_hand.gd  play_hand.gd.uid  play_hand.tscn
cat/view/hud/: combo_popup.gd  combo_popup.gd.uid  combo_popup.tscn  combo_popup_manager.gd  combo_popup_manager.gd.uid  entity_stats_panel.gd  entity_stats_panel.gd.uid  entity_stats_panel.tscn  loading_progress.gd  loading_progress.gd.uid  loading_progress.tscn  structure_info_panel.gd  structure_info_panel.gd.uid  structure_info_panel.tscn  tile_info.gd  tile_info.gd.uid  tile_info.tscn
cat/view/main/: main.gd  main.gd.uid  main.tscn
cat/view/novel/: README.md  dialogue_data.gd  dialogue_data.gd.uid  novel_panel.gd  novel_panel.gd.uid  novel_panel.tscn
cat/view/social/: generate_social_atlas.py  social_logos.gd  social_logos.gd.uid  social_logos.gdshader  social_logos.gdshader.uid  social_logos.tscn  sprite_social_logos_atlas.json  sprite_social_logos_atlas.png.import
cat/view/title/: title.gd  title.gd.uid  title.tscn
rust/: Cargo.toml  TOAST_TEST_README.md  sync.sh
rust/.cargo/: config.toml
rust/src/: async_runtime.rs  config.rs  lib.rs  macros.rs
rust/src/card/: card.rs  card_combo.rs  card_combo.rs.bak  card_combo.rs.bak2  card_combo.rs.bak3  card_combo.rs.bak4  card_combo.rs.bak5  card_combo.rs.bak6  card_combo.rs.bak7  card_registry.rs  mod.rs
rust/src/combat/: bridge.rs  combat_state.rs  combat_system.rs  mod.rs  range_calculator.rs  target_finder.rs
rust/src/db/: mod.rs  native.rs  wasm.rs
rust/src/economy/: bridge.rs  mod.rs  resource_ledger.rs
rust/src/events/: actor.rs  bridge.rs  mod.rs  types.rs  workers.rs
rust/src/loot/: bridge.rs  drop_table.rs  loot_system.rs  mod.rs
rust/src/macos/: README.md  macos_gui_options.rs  macos_window_bridge.rs  macos_wry_browser_options.rs  mod.rs
rust/src/npc/: boat.rs  entity.rs  entity_worker.rs  mod.rs  spawn_manager.rs  terrain_cache.rs  unified_pathfinding.rs
rust/src/npc/ground/: mod.rs  npc_entity.rs  pathfinding.rs
rust/src/npc/ship/: mod.rs  pathfinding.rs  ship_entity.rs
rust/src/stats/: bridge.rs  entity_stats.rs  mod.rs
rust/src/storage/: flow_field.rs  kdtree.rs  mod.rs  quad_tree.rs  rvo.rs  spatial_hash.rs  ulid_storage.rs
rust/src/structures/: city.rs  manager.rs  mod.rs
rust/src/ui/: mod.rs  toast.rs
rust/src/utility/: ulid.rs
rust/src/web/: README.md  chat_history.rs  client.rs  emscripten_websocket.rs  irc.rs  irc_bridge.rs  irc_client.rs  mod.rs  network_worker.rs  protocol.rs  web_browser.rs
rust/src/windows/: mod.rs  windows_wry_browser_options.rs
rust/src/world_gen/: biomes.rs  chunk_generator.rs  city_location.rs  mod.rs  noise.rs
screenshot/: TileMap — Godot Engine (stable) documentation in English.html
scripts/: create_card_atlas.py  debug_godot.py  sync.py  test_seed_hash.gd
(+257 files in other folders)
