[package]
name = "godo"
version = "0.1.1"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[features]
default = []
debug_logs = []

[dependencies]
arc-swap = "1.7.1"
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
] }
bitflags = "2.10.0"
crossbeam-queue = "0.3.12"
crossbeam-channel = "0.5"
dashmap = "6.1.0"
fastnoise-lite = "1.1.1"
godot = { version = "0.3.5", features = [
    "experimental-wasm",
    "experimental-threads",
] }
once_cell = "1.21.3"
papaya = "0.2.3"
parking_lot = "0.12"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = { version = "2.0.1", features = ["serde"] }
ulid = "1.2.1"

# HTTP/WebSocket support (native)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12.24", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tungstenite = { version = "0.24", default-features = false }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"

# HTTP/WebSocket support (WASM)
[target.'cfg(target_family = "wasm")'.dependencies]
gloo-net = { version = "0.6.0", features = ["websocket", "http"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
futures-util = { version = "0.3", features = ["sink"] }

# WASM storage (uses Emscripten IDBFS backed by browser IndexedDB)
# WASM implementation uses standard Rust std::fs operations with /terrain_cache mounted as IDBFS
# This provides persistent storage without requiring wasm-bindgen or additional dependencies
# Requires IDBFS mount from JavaScript: FS.mount(IDBFS, { autoPersist: true }, '/terrain_cache')
# See src/db/wasm.rs for full implementation details and JavaScript setup examples
#
# Note: sqlite-wasm-rs is incompatible because it requires wasm32-unknown-unknown target,
# but Godot GDExtension uses wasm32-unknown-emscripten (no wasm-bindgen support)