[package]
name = "godo"
version = "0.1.1"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[features]
default = []
debug_logs = []

[dependencies]
arc-swap = "1.7.1"
bitflags = "2.10.0"
crossbeam-queue = "0.3.12"
crossbeam-channel = "0.5"
dashmap = "6.1.0"
fastnoise-lite = "1.1.1"
godot = { version = "0.3.5", features = [
    "experimental-wasm",
    "experimental-threads",
] }
once_cell = "1.21.3"
papaya = "0.2.3"
parking_lot = "0.12"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = { version = "2.0.1", features = ["serde"] }
ulid = "1.2.1"

# DEPRECATED: HTTP/WebSocket dependencies (IRC now handled by GDScript)
# Kept for reference but can be removed in future cleanup
# [target.'cfg(not(target_family = "wasm"))'.dependencies]
# reqwest = { version = "0.12.24", features = ["json", "stream", "blocking"] }
# tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
# tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
# tungstenite = { version = "0.24", default-features = false }
# rustls = { version = "0.23", features = ["ring"] }
# futures-util = "0.3"

# Native-only dependencies (non-WASM)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }

# macOS-specific dependencies
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSWindow", "NSColor"] }
wry = { version = "0.53.5", features = ["transparent", "devtools"] }
raw-window-handle = "0.6.2"
http = "1.1.0"
infer = "0.19.0"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }

# Windows-specific dependencies
[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.59", features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
wry = { version = "0.53.5", features = ["transparent", "devtools"] }
raw-window-handle = "0.6.2"
http = "1.1.0"
infer = "0.19.0"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }

# WASM storage (uses Emscripten IDBFS backed by browser IndexedDB)
# WASM implementation uses standard Rust std::fs operations with /terrain_cache mounted as IDBFS
# This provides persistent storage without requiring wasm-bindgen or additional dependencies
# Requires IDBFS mount from JavaScript: FS.mount(IDBFS, { autoPersist: true }, '/terrain_cache')
# See src/db/wasm.rs for full implementation details and JavaScript setup examples
#
# Note: sqlite-wasm-rs is incompatible because it requires wasm32-unknown-unknown target,
# but Godot GDExtension uses wasm32-unknown-emscripten (no wasm-bindgen support)